Home is now README.md
FossilOrigin-Name: f00f3b70b51a80c5d0ba7d01ab72e5a03f1e798ed4b973525790f836935c8931

--- a/libmusl/Makefile
+++ b/libmusl/Makefile
@@ -2,23 +2,21 @@
 MUSLVER=1.1.24
 SOURCEP=musl-$(MUSLVER)
 MUSLURL=https://www.musl-libc.org/releases/$(SOURCEP).tar.gz
-BUILDDIR=$(SOURCEP)/build
+BUILDDIR=build
 
 all: mkdirs download $(BUILDDIR)/obj/musl-gcc
 
 mkdirs:
 	mkdir -p $(BUILDDIR)
 
-download: $(SOURCEP).tar.gz:
+download: $(SOURCEP).tar.gz
 
 $(SOURCEP).tar.gz:
 	wget $(MUSLURL) || wget http://jsish.org/download/musl-$(MUSLVER).tar.gz
 	tar -xzpvf musl-$(MUSLVER).tar.gz
 
-$(SOURCEP)/obj/musl-gcc:
-	cd $(SOURCEP)
-	./configure --prefix=../build
-	make
+$(BUILDDIR)/obj/musl-gcc:
+	(cd $(BUILDDIR) && ../$(SOURCEP)/configure --prefix=$PWD && make && make install)
 
 clean:
 
