--- a/c-demos/cdata/Makefile
+++ b/c-demos/cdata/Makefile
@@ -2,8 +2,9 @@ JSIDIR=../../src
 OTHER=
 CSTRFN=../../lib/Cdata.jsi 
 JSISH=../../jsish
+NOLINE=false
 #CSTRPP=$(JSISH) $(CSTRFN) 
-CSTRPP=$(JSISH) -c
+CSTRPP=$(JSISH) -c -noline $(NOLINE)
 CCGET=$(CSTRPP) -cflags true
 DEPS=$(CSTRFN) $(JSIDIR)/jsi.c $(JSIDIR)/jsi.h Makefile
 STATICS=Bee Car Baker
