--- a/lws/Makefile
+++ b/lws/Makefile
@@ -3,7 +3,8 @@
 LWS_VER=2.0202
 TARGET=unix
 SDIR=lws-$(LWS_VER)
-LWSLIB=$(SDIR)/liblws_$(TARGET)-$(LWS_VER).a
+
+LWS_LIBNAME=$(SDIR)/liblws.a
 CFLAGS  = -g -Wall
 
 ifeq ($(MINIZ),1)
@@ -11,7 +12,7 @@ LWSOPTS = -I../../miniz
 endif
 
 all: $(SDIR)/Makefile
-	$(MAKE) -C$(SDIR) TARGET=$(TARGET) LWSOPTS=$(LWSOPTS) CC=$(CC)
+	$(MAKE) -C$(SDIR) TARGET=$(TARGET) LWSOPTS=$(LWSOPTS) CC=$(CC) LWS_LIBNAME=$(LWS_LIBNAME)
 
 $(SDIR)/Makefile:
 	wget  http://jsish.org/fossil/lws/zip/lws?r=ver-$(LWS_VER) -O lws-$(LWS_VER).zip 
