--- a/c-demos/Makefile
+++ b/c-demos/Makefile
@@ -2,14 +2,16 @@ JSIROOT=..
 ACFLAGS= -g -Wall -I$(JSIROOT) -I$(JSIROOT)/src
 CFLAGS=$(ACFLAGS)
 LIBJSI=libjsish.a
+JSISH=$(JSIROOT)/jsish
 ALDFLAGS=-lm -ldl -lpthread
+-include $(JSIROOT)/make.conf
 
 HASMYSQL=$(shell $(JSIROOT)/jsish -e 'return(MySql!==undefined);')
 ifeq ($(HASMYSQL),true)
 ALDFLAGS+=-lmysqlclient
 endif
 
-HASLIBSAN=$(shell ldd $(JSIROOT)/jsish | grep libasan)
+HASLIBSAN=$(shell ldd $(JSISH) | grep libasan)
 ifneq ($(HASLIBSAN),)
 CFLAGS+=-fsanitize=address
 endif
@@ -20,7 +22,7 @@ ALLDEPS=$(JSIROOT)/jsi.c $(JSIROOT)/libjsish.so $(JSIROOT)/src/jsi.h Makefile
 
 SLDFLAGS=-Wl,-rpath=`pwd`/$(JSIROOT) -L$(JSIROOT) -ljsish $(ALDFLAGS) 
 
-all: basic cmds dbdemo stubs
+all: basic cmds dbdemo stubs dyn.so dyno.so dynspec.so
 
 libjsi.a: $(JSIROOT)/jsi.c
 	$(CC) $(CFLAGS) $< -c -o jsi.o
@@ -33,9 +35,9 @@ libjsish.a: $(JSIROOT)/jsish.c
 libjsish.so: $(JSIROOT)/jsish.c
 	$(CC) $(ACFLAGS) $(SHFLAGS) $< -rdynamic -o $@
 
-jsish: $(JSIROOT)/jsish.c
+jsishs: $(JSIROOT)/jsish.c
 	$(CC) $(ACFLAGS) -fpic -DJSI__MAIN=1 $< -rdynamic -o $@ -lm -ldl -lpthread
-	jsish -z create jsish $(JSIROOT)/lib
+	jsish -z create $@ $(JSIROOT)/lib
 
 cmds: cmds.c $(ALLDEPS)
 	$(CC) $(CFLAGS) -o $@ $< $(SLDFLAGS)
@@ -46,6 +48,15 @@ dbdemo: dbdemo.c $(ALLDEPS)
 basic: basic.c $(ALLDEPS)
 	$(CC) $(CFLAGS) -o $@ $< $(SLDFLAGS)
 
+dyn.so: dyn.c $(ALLDEPS)
+	$(CC) $(CFLAGS) -fPIC -shared -o $@ $<
+
+dyno.so: dyno.c $(ALLDEPS)
+	$(CC) $(CFLAGS) -fPIC -shared -o $@ $<
+
+dynspec.so: dynspec.c $(ALLDEPS)
+	$(CC) $(CFLAGS) -fPIC -shared -o $@ $<
+
 stubs:
 	$(MAKE) -C stubs
 	
@@ -55,6 +66,9 @@ testmem:
 test: all
 	./basic
 	./cmds
+	$(JSISH) --T dyn-test.jsi
+	$(JSISH) --T dyno-test.jsi
+	$(JSISH) --T dynspec-test.jsi
 	echo 'exit(0);' | ./dbdemo -benchmark
 	$(MAKE) -C stubs test
 	$(MAKE) -C cextn
