--- a/c-demos/Makefile
+++ b/c-demos/Makefile
@@ -22,7 +22,7 @@ ALLDEPS=$(JSIROOT)/jsi.c $(JSIROOT)/libjsish.so $(JSIROOT)/src/jsi.h Makefile
 
 SLDFLAGS=-Wl,-rpath=`pwd`/$(JSIROOT) -L$(JSIROOT) -ljsish $(ALDFLAGS) 
 
-all: basic cmds dbdemo stubs dyn.so dyno.so dynspec.so
+all: basic cmds dbdemo stubs dyn.so dyno.so dynspec.so dynspecn.so
 
 libjsi.a: $(JSIROOT)/jsi.c
 	$(CC) $(CFLAGS) $< -c -o jsi.o
@@ -57,6 +57,9 @@ dyno.so: dyno.c $(ALLDEPS)
 dynspec.so: dynspec.c $(ALLDEPS)
 	$(CC) $(CFLAGS) -fPIC -shared -o $@ $<
 
+dynspecn.so: dynspecn.c $(ALLDEPS)
+	$(CC) $(CFLAGS) -fPIC -shared -o $@ $<
+
 stubs:
 	$(MAKE) -C stubs
 	
@@ -69,6 +72,7 @@ test: all
 	$(JSISH) --T dyn-test.jsi
 	$(JSISH) --T dyno-test.jsi
 	$(JSISH) --T dynspec-test.jsi
+	$(JSISH) --T dynspecn-test.jsi
 	echo 'exit(0);' | ./dbdemo -benchmark
 	$(MAKE) -C stubs test
 	$(MAKE) -C cextn
