--- a/lib/web/md/Makefile
+++ b/lib/web/md/Makefile
@@ -2,5 +2,5 @@ BLDDIR=../../../
 JSISH=$(BLDDIR)/jsish
 all:
 	$(JSISH) $(BLDDIR)/tools/mkref.jsi -O Reference.md
-	$(JSISH) $(BLDDIR)/tools/mkindex.jsi > index.md
+	$(JSISH) $(BLDDIR)/tools/mkdocs.jsi -O index.json .
 
