--- a/lib/web/md/Makefile
+++ b/lib/web/md/Makefile
@@ -2,5 +2,5 @@ BLDDIR=../../../
 JSISH=$(BLDDIR)/jsish
 all:
 	$(JSISH) $(BLDDIR)/tools/mkref.jsi -O Reference.md
-	$(JSISH) $(BLDDIR)/lib/Docs.jsi -O index.json .
+	$(JSISH) $(BLDDIR)/lib/Docs.jsi .
 
