--- a/Configs/make_muslssl.conf
+++ b/Configs/make_muslssl.conf
@@ -1,5 +1,5 @@
 # make.conf : Musl
-DEFCONFIG_VER=2.0332
+DEFCONFIG_VER=3.0500
 JSI_CONFIG_DEFINED=1
 WITH_SSL=1
 JSI__BASE64=1
@@ -24,7 +24,7 @@ JSI__MINIZ=1
 WITH_EXT_SOCKET=1
 WITH_EXT_SQLITE=1
 WITH_EXT_WEBSOCKET=1
-WITH_MOD_MYSQL=1
+WITH_MOD_MYSQL=0
 BUILDIN_SQLITE=1
 BUILDIN_WEBSOCKET=1
 JSI__ZIPLIB=1
@@ -33,10 +33,10 @@ TARGET=musl
 PREFIX=/usr/local
 LINKSTATIC=1
 XCPREFIX=
-BUILDMODS=mysql
+BUILDMODS=
 
 PROGFLAGS=  -DJSI__BASE64=1 -DJSI__CDATA=1 -DJSI__DEBUG=1 -DJSI__ENCRYPT=1 -DJSI__EVENT=1 -DJSI__FILESYS=1 -DJSI__INFO=1 -DJSI__LOAD=1 -DJSI__MATH=1 -DJSI__MD5=1 -DJSI__READLINE=1 -DJSI__SHA1=1 -DJSI__SHA256=1 -DJSI__SIGNAL=1 -DJSI__STUBS=1 -DJSI__THREADS=1 -DJSI__ZVFS=1 -DJSI__MEMDEBUG=0 -DJSI__MINIZ=1 -DJSI__REGEX=0 -DJSI__SANITIZE=0 -DJSI__SOCKET=1 -DJSI__SQLITE=1 -DJSI__WEBSOCKET=1
-MODFLAGS=  -DJSI__MYSQL=1
+MODFLAGS=  -DJSI__MYSQL=0
 
 # command: ./configure --target=musl --opt=+miniz --static --label=Musl
 # prefix : /usr/local
@@ -46,4 +46,4 @@ MODFLAGS=  -DJSI__MYSQL=1
 # nozip  : 0
 # opt    : base64,cdata,debug,encrypt,event,filesys,info,load,math,md5,sha1,sha256,signal,stubs,threads,zvfs,miniz
 # ext    : socket,sqlite,websocket
-# mod    : mysql
+# mod    :
