--- a/Configs/make_noext.conf
+++ b/Configs/make_noext.conf
@@ -1,5 +1,5 @@
 # make.conf : Release
-DEFCONFIG_VER=2.0332
+DEFCONFIG_VER=3.0500
 JSI_CONFIG_DEFINED=1
 JSI__BASE64=1
 JSI__CDATA=1
@@ -39,12 +39,12 @@ BUILDMODS=
 PROGFLAGS=  -DJSI__BASE64=1 -DJSI__CDATA=1 -DJSI__DEBUG=1 -DJSI__ENCRYPT=1 -DJSI__EVENT=1 -DJSI__FILESYS=1 -DJSI__INFO=1 -DJSI__LOAD=1 -DJSI__MATH=1 -DJSI__MD5=1 -DJSI__MINIZ=1 -DJSI__READLINE=1 -DJSI__SHA1=1 -DJSI__SHA256=1 -DJSI__SIGNAL=1 -DJSI__STUBS=1 -DJSI__THREADS=1 -DJSI__ZVFS=1 -DJSI__MEMDEBUG=0 -DJSI__REGEX=0 -DJSI__SANITIZE=0 -DJSI__SOCKET=0 -DJSI__SQLITE=0 -DJSI__WEBSOCKET=0 -DJSI__SQLITE=0 -DJSI__WEBSOCKET=0 -DJSI__MYSQL=0
 MODFLAGS= 
 
-# command: ./configure --ext=+sqlite,websocket,mysql --label=Release
+# command: ./configure --ext=+sqlite,websocket --label=Release
 # prefix : /usr/local
 # program: jsish
 # target : unix
 # shared : 0
 # nozip  : 0
 # opt    : base64,cdata,debug,encrypt,event,filesys,info,load,math,md5,readline,sha1,sha256,signal,stubs,threads,zvfs
-# ext    : socket,sqlite,websocket,sqlite,websocket,mysql
+# ext    : socket,sqlite,websocket,sqlite,websocket
 # mod    : 
