--- a/Configs/make_mysql.conf
+++ b/Configs/make_mysql.conf
@@ -1,5 +1,5 @@
 # make.conf : 
-DEFCONFIG_VER=3.0500
+DEFCONFIG_VER=2.0332
 JSI_CONFIG_DEFINED=1
 JSI__BASE64=1
 JSI__CDATA=1
@@ -23,7 +23,7 @@ JSI__ZVFS=1
 WITH_EXT_SOCKET=1
 WITH_EXT_SQLITE=1
 WITH_EXT_WEBSOCKET=1
-WITH_MOD_MYSQL=0
+WITH_MOD_MYSQL=1
 BUILDIN_SQLITE=1
 BUILDIN_WEBSOCKET=1
 JSI__ZIPLIB=1
@@ -32,10 +32,10 @@ TARGET=unix
 PREFIX=/usr/local
 LINKSTATIC=0
 XCPREFIX=
-BUILDMODS=
+BUILDMODS=mysql
 
 PROGFLAGS=  -DJSI__BASE64=1 -DJSI__CDATA=1 -DJSI__DEBUG=1 -DJSI__ENCRYPT=1 -DJSI__EVENT=1 -DJSI__FILESYS=1 -DJSI__INFO=1 -DJSI__LOAD=1 -DJSI__MATH=1 -DJSI__MD5=1 -DJSI__MINIZ=1 -DJSI__READLINE=1 -DJSI__SHA1=1 -DJSI__SHA256=1 -DJSI__SIGNAL=1 -DJSI__STUBS=1 -DJSI__THREADS=1 -DJSI__ZVFS=1 -DJSI__MEMDEBUG=0 -DJSI__REGEX=0 -DJSI__SANITIZE=0 -DJSI__SOCKET=1 -DJSI__SQLITE=1 -DJSI__WEBSOCKET=1
-MODFLAGS=  -DJSI__MYSQL=0
+MODFLAGS=  -DJSI__MYSQL=1
 
 # command: ./configure --config=default
 # prefix : /usr/local
@@ -45,4 +45,4 @@ MODFLAGS=  -DJSI__MYSQL=0
 # nozip  : 0
 # opt    : base64,cdata,debug,encrypt,event,filesys,info,load,math,md5,readline,sha1,sha256,signal,stubs,threads,zvfs
 # ext    : socket,sqlite,websocket
-# mod    : 
+# mod    : mysql
