--- a/Configs/make_sanitize.conf
+++ b/Configs/make_sanitize.conf
@@ -1,5 +1,5 @@
-# make.conf : Devel
-DEFCONFIG_VER=2.5.23
+# make.conf : sanitize
+DEFCONFIG_VER=3.0500
 JSI_CONFIG_DEFINED=1
 JSI__BASE64=1
 JSI__CDATA=1
@@ -26,7 +26,7 @@ WITH_EXT_SQLITE=1
 WITH_EXT_WEBSOCKET=1
 WITH_EXT_SQLITE=1
 WITH_EXT_WEBSOCKET=1
-WITH_EXT_MYSQL=1
+WITH_EXT_MYSQL=0
 BUILDIN_SQLITE=1
 BUILDIN_WEBSOCKET=1
 JSI__ZIPLIB=1
@@ -37,15 +37,15 @@ LINKSTATIC=0
 XCPREFIX=
 BUILDMODS=
 
-PROGFLAGS=  -DJSI__BASE64=1 -DJSI__CDATA=1 -DJSI__DEBUG=1 -DJSI__ENCRYPT=1 -DJSI__EVENT=1 -DJSI__FILESYS=1 -DJSI__INFO=1 -DJSI__LOAD=1 -DJSI__MATH=1 -DJSI__MD5=1 -DJSI__READLINE=1 -DJSI__SHA1=1 -DJSI__SHA256=1 -DJSI__SIGNAL=1 -DJSI__STUBS=1 -DJSI__THREADS=1 -DJSI__ZVFS=1 -DJSI__MEMDEBUG=1 -DJSI__MINIZ=1 -DJSI__REGEX=0 -DJSI__SANITIZE=1 -DJSI__SOCKET=1 -DJSI__SQLITE=1 -DJSI__WEBSOCKET=1 -DJSI__SQLITE=1 -DJSI__WEBSOCKET=1 -DJSI__MYSQL=1
+PROGFLAGS=  -DJSI__BASE64=1 -DJSI__CDATA=1 -DJSI__DEBUG=1 -DJSI__ENCRYPT=1 -DJSI__EVENT=1 -DJSI__FILESYS=1 -DJSI__INFO=1 -DJSI__LOAD=1 -DJSI__MATH=1 -DJSI__MD5=1 -DJSI__READLINE=1 -DJSI__SHA1=1 -DJSI__SHA256=1 -DJSI__SIGNAL=1 -DJSI__STUBS=1 -DJSI__THREADS=1 -DJSI__ZVFS=1 -DJSI__MEMDEBUG=1 -DJSI__MINIZ=1 -DJSI__REGEX=0 -DJSI__SANITIZE=1 -DJSI__SOCKET=1 -DJSI__SQLITE=1 -DJSI__WEBSOCKET=1 -DJSI__SQLITE=1 -DJSI__WEBSOCKET=1 -DJSI__MYSQL=0
 MODFLAGS= 
 
-# command: ./configure --ext=+sqlite,websocket,mysql --label=Devel --opt=+sanitize,memdebug
+# command: ./configure --ext=+sqlite,websocket --label=sanitize --opt=+sanitize,memdebug
 # prefix : /usr/local
 # program: jsish
 # target : unix
 # shared : 0
 # nozip  : 0
 # opt    : base64,cdata,debug,encrypt,event,filesys,info,load,math,md5,readline,sha1,sha256,signal,stubs,threads,zvfs,sanitize,memdebug
-# ext    : socket,sqlite,websocket,sqlite,websocket,mysql
+# ext    : socket,sqlite,websocket,sqlite,websocket
 # mod    : 
