Finish part2 of move to github
FossilOrigin-Name: 45f85f8f52f11a1e9304fec7065571dc6ec6064023a6881928bf8426986337d8

--- a/openssl/Makefile
+++ b/openssl/Makefile
@@ -1,7 +1,8 @@
 # Makefile to download/compile "libcrypto.a"
 TARGET=unix
-SROOT=openssl-OpenSSL_1_1_1-stable
-ZIPFILE=$(SROOT).zip
+GROOT=OpenSSL_1_1_1-stable
+SROOT=openssl-$(GROOT)
+ZIPFILE=$(GROOT).zip
 SDIR=$(TARGET)/$(SROOT)
 DSTLIB=$(SDIR)/libcrypto.a
 BLDTARG="linux-x86_64"
@@ -18,8 +19,7 @@ endif
 all: $(ZIPFILE) $(DSTLIB)
 
 $(ZIPFILE):
-	wget  http://jsish.org/download/$(ZIPFILE)
-	# TODO FALLBACK: wget  http://github.com/openssl/openssl/archive/$(ZIPFILE)
+	wget  http://github.com/openssl/openssl/archive/$(ZIPFILE)
 
 $(DSTLIB):
 	mkdir -p $(SDIR) $(TARGET)/include
